# coursera-deep-learning-specialization

./: Cargo.toml  README.md
.devcontainer/: Dockerfile.ubuntu  devcontainer.json
src/: lib.rs
src/c1/: mod.rs
src/c1/w2/: mod.rs  pa_01_basics.rs  pa_02_logistic_regression.rs
src/c1/w3/: mod.rs  pa_01_planar_data_classification.rs  util.rs
src/c1/w4/: mod.rs  pa_01_deep_nn.rs  pa_02_deep_nn.rs
src/c2/: mod.rs
src/c2/w1/: mod.rs  pa_01_init.rs  pa_02_regularization.rs  pa_03_gradient_check.rs  util.rs
src/c2/w2/: mod.rs  pa_01_optimization.rs
src/helpers/: mod.rs
src/helpers/_burn/: mod.rs
src/helpers/_candle/: mod.rs
src/helpers/_dfdx/: dot.rs  flat_right.rs  hdf5read.rs  mod.rs  outer.rs  stack_right.rs
