[package]
name = "coursera-exercises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
hdf5 = "0.8.1"
ndarray = "0.15.6"
image = "0.24.7"
num-traits = "0.2.16"
anyhow = "1.0.0"
serde_derive = "=1.0.171" # https://github.com/serde-rs/serde/issues/2538
float-cmp = "0.9.0"
#
# burn
burn = "0.8.0"
burn-autodiff = "0.8.0"
burn-ndarray = "0.8.0"
burn-wgpu = "0.8.0"

[dependencies.dfdx]
version = "=0.13.0"
default-features = false
features = [
    "std",
    "fast-alloc",
    "cpu",
    "cuda",
    "cudnn",
    "safetensors",
    "numpy",
    "nightly",
]

[dependencies.candle-core]
version = "0.1.1"
features = ["cuda", "cudnn"]

[features]
default = [] # dfdx cpu, candle cpu, burn cpu
# default = ["cuda", "wgpu"] # dfdx cuda, candle cuda, burn wpgu
cuda = []
wgpu = []
